Fixed images width on small devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,6 +14,10 @@ a:link, a:visited {
   color: rgb(92, 92, 92);
 }
 
+.article-content img {
+  max-width: 100%;
+}
+
 .article-tags {
   margin-bottom: 6px;
 }
